--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@import url(./content.css);
 
 :root{
     --primary-blue: hsl(246, 80%, 60%);
@@ -13,33 +14,50 @@
     --neutral-pale-blue: hsl(236, 100%, 87%);
 }
 
-/* ## Colors
+@font-face{
+    font-family: 'Rubik';
+    src:url(../fonts/Rubik/Rubik-VariableFont_wght.ttf)
+}
 
-### Primary
+body {
+    height:100vh;
+    width: 100%;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 11.45833% 77.08334% 11.45833%;
+    grid-template-rows: 24.70703% 50.58594% 24.70703%;
+    background-color: var(--neutral-very-dark-blue);
+    font-size: 18px;
+    font-family: 'Rubik', Arial, Helvetica, sans-serif
+}
 
-- Blue: hsl(246, 80%, 60%)
+h1 {
+    font-family: 'Rubik', Arial, Helvetica, sans-serif;
+    font-size: 56px;
+    font-weight: 300;
+}
 
-- Light red (work): hsl(15, 100%, 70%)
-- Soft blue (play): hsl(195, 74%, 62%)
-- Light red (study): hsl(348, 100%, 68%)
-- Lime green (exercise): hsl(145, 58%, 55%)
-- Violet (social): hsl(264, 64%, 52%)
-- Soft orange (self care): hsl(43, 84%, 65%)
+h2 {
+    font-family: 'Rubik', Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    font-weight: 300;
+}
 
-### Neutral
+h4 {
+    font-family: 'Rubik', Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+}
 
-- Very dark blue: hsl(226, 43%, 10%)
-- Dark blue: hsl(235, 46%, 20%)
-- Desaturated blue: hsl(235, 45%, 61%)
-- Pale Blue: hsl(236, 100%, 87%)
+h5 {
+    font-family: 'Rubik', Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: var(--neutral-pale-blue)
+}
 
-## Typography
-
-### Body Copy
-
-- Font size: 18px (card titles e.g. Work, Play)
-
-### Font
-
-- Family: [Rubik](https://fonts.google.com/specimen/Rubik)
-- Weights: 300, 400, 500*/
+p {
+    margin: 0;
+    color: var(--neutral-desaturated-blue)
+}
