cleaned up lines

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,3 +70,12 @@ p:hover {
     color:white;
     cursor: pointer;
 }
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+  }
+
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  }
