--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,8 +25,8 @@ body {
   width: 100%;
   margin: 0;
   display: grid;
-  grid-template-columns: 11.45833% 77.08334% 11.45833%;
-  grid-template-rows: 24.70703% 50.58594% 24.70703%;
+  grid-template-columns: 11.45833% auto 11.45833%;
+  grid-template-rows: 24.70703% auto 24.70703%;
   background-color: var(--neutral-very-dark-blue);
   font-size: 18px;
   font-family: "Rubik", Arial, Helvetica, sans-serif;
@@ -103,9 +103,9 @@ p:hover {
     grid-template-rows: 5% auto 5%;
   }
 
-  .work-current-fit {
-    font-size: 56px;
-    }
+  h1{
+    font-size: 50px;
+  }
 
 }
 
